# canalisation-backend

./: CMakeLists.txt  README  README.md
3rd/: README  README.md
lib-mariadb-access/: CMakeLists.txt
lib-mariadb-access/include/: mariadb_access.hpp
lib-mariadb-access/src/: mariadb_access.cpp
login-service/: CMakeLists.txt  Dockerfile  README  README.md  config.yaml  run.sh
login-service/grpc/: CMakeLists.txt
login-service/grpc/cmake/: common.cmake
login-service/grpc/include/: auth_service_grpc.hpp
login-service/grpc/proto/: login.proto
login-service/grpc/src/: auth_service_grpc.cpp
login-service/include/: db_access.hpp  login_service.hpp
login-service/sql/: database.sql
login-service/src/: db_access.cpp  login_service.cpp  main.cpp
