CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBIITY)

PROJECT(mariadb_access)

SET(${PROJECT_NAME}_MAJOR_VERSION 1)
SET(${PROJECT_NAME}_MINOR_VERSION 0)
SET(${PROJECT_NAME}_PATCH_VERSION 0)

FILE(GLOB Hdrs ${PROJECT_SOURCE_DIR}/include/*.hpp)
FILE(GLOB Impl ${PROJECT_SOURCE_DIR}/src/*.cpp)
SET (SOURCES ${Hdrs} ${Impl})
	
#FIND_PACKAGE(Openssl REQUIRED)
#FIND_PACKAGE(MariadbConnector REQUIRED)
#FIND_PACKAGE(Json11 REQUIRED)
#FIND_PACKAGE(Pistache REQUIRED)
#FIND_PACKAGE(Googletest REQUIRED)

SET(3RD_ROOT "${PROJECT_SOURCE_DIR}/../3rd")

SET(GSL_ROOT "${3RD_ROOT}/GSL-3.1.0")
SET(GSL_INCLUDE "${GSL_ROOT}/include")

SET(MARIADB_ROOT "${3RD_ROOT}/mariadb-connector-c-3.2.5-src")
SET(MARIADB_INCLUDE "${MARIADB_ROOT}/include")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include
	${MARIADB_INCLUDE} ${GSL_INCLUDE})

SET(MARIADB_LIB_DIR "${MARIADB_ROOT}/libmariadb")
SET(MARIADB_LIBRARY "${MARIADB_LIB_DIR}/libmariadb.so")
LINK_DIRECTORIES(${MARIADB_LIB_DIR})
SET(CMAKE_DEBUG_POSTFIX d) 

#MESSAGE("#############" ${MARIADB_LIBRARY})
#MESSAGE("#############" ${LIBRARIES_TO_IMPORT_DEBUG})
#MESSAGE("#############" ${LIBRARIES_TO_IMPORT_OPTIMIZED})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MARIADB_LIBRARY} debug ${MARIADB_LIBRARY} optimized ${MARIADB_LIBRARY})

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT libraries LIBRARY DESTINATION bin)